objects/Custom_Widgets__c.object
<CustomObject><fields>
        <fullName>ComponentId__c</fullName>
        <label>ComponentId</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Template_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Map</label>
        <referenceTo>Template_Map__c</referenceTo>
        <relationshipLabel>Custom Widgets</relationshipLabel>
        <relationshipName>Custom_Widgets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>isDisplayed__c</fullName>
        <label>Display Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Custom Widget</label><nameField>
        <label>Custom Widgets Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Custom Widgets</pluralLabel><sharingModel>ReadWrite</sharingModel><recordTypes>
        <fullName>Center_Widgets</fullName>
        <active>true</active>
        <label>Center Widgets</label>
    </recordTypes><recordTypes>
        <fullName>Side_Widgets</fullName>
        <active>true</active>
        <label>Side Widgets</label>
    </recordTypes></CustomObject>